A10 - Implementação do jQuery DataTable e listagem de usuários
- Adicionado a função gerenciar no Controller usuarios
- Adicionado a opcao/tela gerenciar na view usuarios_view
- Adicionado a função getAll() no model usuarios_model
- Adicionada a pasta js dentro de ./assets
- Adicionada a pasta images dentro de ./assets
- Criado o arquivo table.js para interagir com o Data-Table
- Adicionado o caminho para o table.js no header
- Adicionado o helper html no Controller usuarios função Gerenciar

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -13,3 +13,13 @@
 .alert p{
 	margin: 0px !important;
 }
+
+/* Tabelas */
+
+th.sorting_asc{
+	background: url("assets/images/black_up.png") right center no-repeat !important;
+}
+
+th.sorting_desc{
+	background: url("assets/images/black_down.png") right center no-repeat !important;
+}
