A20 - Criação de Paginas utilizando o TinyMCE
	- Criado o Controller Page baseado no Controller midia
	
	- Criado a View page_view baseada na view midia
	
	- Criado o Model page_model baseado no Model midia
	
	- Adicionado as opções de menu para paginas em painel_view
	
	- Adicionado a funcao initHtmlEditor para inicialização do TinYMCE no
funcoes_helper
	
	- Adiciona a função includeFile() que inclui um arquivo no
funcoes_helper
	
	- Adicionado a formatação da classe do .mceLayout no app.css

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -23,3 +23,8 @@ th.sorting_asc{
 th.sorting_desc{
 	background: url("assets/images/black_down.png") right center no-repeat !important;
 }
+
+/* Tiny MCE */
+.mceLayout{
+	margin-bottom: 20px !important;
+}
